styling nav bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="wall">
+    <h1>Eunjeong Hur</h1>
     <header>
         <nav>
             <ul class="nav_ul">
@@ -21,7 +23,6 @@
         </nav>
     </header>
     <main>
-        <h1  class="after_nav">Hello, I'm Eunjeong Hur</h1>
         <h2>This is the list of the courses I am taking this term.</h2>
         <ul>
             <li>ACIT 1620</li>
@@ -33,5 +34,6 @@
             <li>ORGB 1100</li>
         </ul>
     </main>
+    </div>
 </body>
 </html>
