--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Ubuntu&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
-<body>
-    <div id="wall">
-    <h1>Eunjeong Hur</h1>
-    <header>
+<body id="index_body">
+    <div class="wall index_wall">
+    <h1>Eunjeong Hur | 1620</h1>
+    <header class="index_header">
         <nav>
             <ul class="nav_ul">
-                <li id="current_page"><a href="index.html">Home Page</a></li>
+                <li id="current_page"><a href="index.html" id="c_p">Home Page</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="#">Page 3</a></li>
                 <li><a href="#">Page 4</a></li>
